force-app/main/default/objects/EmailMessage/fields/Original_Sugar_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Sugar_ID__c</fullName>
    <label>Original Sugar ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>