force-app/main/default/objects/EmailMessage/fields/Sugar_EmailMessage_Id__c.field-meta.xml
<CustomField>
    <fullName>Sugar_EmailMessage_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sugar EmailMessage Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>